# Knossos

./: README.md  pyproject.toml
books/: Ciaphas.epub
opds_downloads/: colour_of_magic.epub
src/knossos/: app.py  config.py  covers.py  db.py  library.py  themes.py
src/knossos/epub/: book.py  search.py
src/knossos/opds/: client.py  feed.py
src/knossos/ui/screens/: library.py  opds.py
src/opds_downloads/: Blood_of_Elves.epub  The_Last_Wish_Introducing_The_Witcher.epub
