[project]
name = "knossos"
version = "0.1.0"
description = "A terminal EPUB reader with library management and OPDS support"
requires-python = ">=3.10"

dependencies = [
    "textual",
    "ebooklib",
    "lxml",
    "html2text",
    "platformdirs",
    "httpx",
    "toml",
    "lxml",

]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/knossos"]

[project.scripts]
knossos = "knossos.app:main"
